Fix addRegion overlapping existing region